working F B L R S
