# swagger/gopigo-swagger.json
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   description: "GoPiGo controller server. Offers an interface to remotely control a GoPiGo robot."
-  version: "0.0.1"
+  version: "0.0.3"
   title: "GoPiGo server"
   termsOfService: "http://swagger.io/terms/"
   contact:
@@ -198,6 +198,20 @@ paths:
               $ref: "#/definitions/ApiResponse"
           404:
             description: "move forward operation failed"
+  /gopigo/motor/motor_forward:
+      get:
+        tags:
+        - "gopigo"
+        summary: "Move GoPiGo forth without PID control"
+        description: "Move GoPiGo forward without PID control"
+        operationId: "motorForward"
+        responses:
+          200:
+            description: "successful operation"
+            schema:
+              $ref: "#/definitions/ApiResponse"
+          404:
+            description: "motor_forward operation failed"
   /gopigo/motor/backward:
       get:
         tags:
